<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="ssl_switch"
        android:summary="@string/ssl_switch_desc"
        android:title="@string/pref_title_ssl" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="ws_switch"
        android:summary="@string/ws_switch_desc"
        android:title="@string/pref_title_ws" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_url"
        android:inputType="textCapWords"
        android:key="url"
        android:summary="@string/url_desc"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_url" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_port"
        android:inputType="number"
        android:key="port"
        android:summary="@string/port_desc"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user"
        android:inputType="textCapWords"
        android:key="user"
        android:summary="@string/user_desc"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_password"
        android:inputType="textCapWords"
        android:key="password"
        android:summary="@string/password_desc"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_keepalive"
        android:inputType="number"
        android:key="keepalive"
        android:summary="@string/keepalive_desc"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_keepalive" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_retry_interval"
        android:inputType="number"
        android:key="retry_interval"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_retry_interval"
        android:summary="@string/retry_interval_desc"/>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_url"
        android:inputType="textCapWords"
        android:key="clientid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_clientid" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="cleansession"
        symmary="@string/cleansession_desc"
        android:title="@string/pref_title_cleansession" />
    <com.github.angads25.filepicker.view.FilePickerPreference
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="ca_crt"
        android:title="@string/ca_crt"
        android:summary="@string/ca_crt_desc"
        android:defaultValue="@string/ca_crt_default"
        app:error_dir="/mnt"
        app:root_dir="/sdcard"
        app:selection_mode="single_mode"
        app:selection_type="file_select"
        app:extensions="crt:"/>
    <com.github.angads25.filepicker.view.FilePickerPreference
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="client_crt"
        android:title="@string/client_crt"
        android:summary="@string/client_crt_desc"
        android:defaultValue="@string/client_crt_default"
        app:error_dir="/mnt"
        app:root_dir="/sdcard"
        app:selection_mode="single_mode"
        app:selection_type="file_select"
        app:extensions="crt:"/>
    <com.github.angads25.filepicker.view.FilePickerPreference
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="client_key"
        android:title="@string/client_key"
        android:summary="@string/client_key_desc"
        android:defaultValue="@string/client_key_default"
        app:error_dir="/mnt"
        app:root_dir="/sdcard"
        app:selection_mode="single_mode"
        app:selection_type="file_select"
        app:extensions="key:"/>
    <com.github.angads25.filepicker.view.FilePickerPreference
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="client_p12"
        android:title="@string/client_p12"
        android:summary="@string/client_p12_desc"
        android:defaultValue="@string/client_p12_default"
        app:error_dir="/mnt"
        app:root_dir="/sdcard"
        app:selection_mode="single_mode"
        app:selection_type="file_select"
        app:extensions="p12:"/>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/client_key_pwd_default"
        android:inputType="textCapWords"
        android:key="client_key_pwd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/client_key_pwd"
        android:summary="@string/client_key_pwd_desc"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
