<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_url"
        android:inputType="textCapWords"
        android:key="lastwill_topic"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_topic" />


    <EditTextPreference
        android:capitalize="words"
        android:key="lastwill_message"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_message" />

    <ListPreference
        android:key="lastwill_qos"
        android:entries="@array/qos_array"
        android:entryValues="@array/qos_array"
        android:title="@string/pref_title_qos" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="lastwill_retained"
        android:title="@string/pref_title_retained" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
