<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".tasker.activity.ConnectTaskerActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LL1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broker"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:padding="5pt" />
            <Spinner
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/brokerSpinner"
                android:layout_alignParentEnd="true"
                android:hint="@string/topic"
                android:layout_alignParentRight="true" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_tasker_msg"
            android:layout_below="@id/LL1"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>