<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".tasker.PublishTaskerActivity"
    tools:showIn="@layout/activity_action_edit">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/topic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:hint="@string/message"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qos_spinner_title"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qos_spinner_title"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="7dp"
        android:id="@+id/qosTV"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qos_spinner"
        android:spinnerMode="dropdown"
        android:prompt="@string/qos_spinner_title"
        android:layout_below="@+id/editText2"
        android:layout_toEndOf="@+id/qosTV"
        android:layout_marginLeft="20dp"
        android:dropDownWidth="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retained"
        android:id="@+id/retTV"
        android:layout_marginLeft="80dp"
        android:layout_alignBaseline="@+id/message_retained"
        android:layout_alignBottom="@+id/message_retained"
        android:layout_toEndOf="@+id/qos_spinner"
        android:layout_marginStart="20dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_retained"
        android:layout_below="@+id/editText2"
        android:layout_toEndOf="@+id/retTV"
        android:layout_marginLeft="30dp"
        />
</RelativeLayout>
