<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".tasker.activity.ActionEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".tasker.PublishTaskerActivity"
        tools:showIn="@layout/activity_action_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LL1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broker"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:padding="5pt" />
            <Spinner
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/brokerSpinner"
                android:layout_alignParentEnd="true"
                android:hint="@string/topic"
                android:layout_alignParentRight="true" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/LL1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/topic"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true"
            android:hint="@string/message"
            android:layout_alignParentLeft="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos_spinner_title"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7dp"
            android:id="@+id/qosTV"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="7dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qos_spinner"
            android:spinnerMode="dropdown"
            android:prompt="@string/qos_spinner_title"
            android:layout_below="@+id/editText2"
            android:layout_toEndOf="@+id/qosTV"
            android:layout_marginLeft="20dp"
            android:dropDownWidth="wrap_content"
            android:layout_toRightOf="@+id/qosTV"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retained"
            android:id="@+id/retTV"
            android:layout_marginLeft="80dp"
            android:layout_alignBaseline="@+id/message_retained"
            android:layout_alignBottom="@+id/message_retained"
            android:layout_toEndOf="@+id/qos_spinner"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/qos_spinner" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message_retained"
            android:layout_below="@+id/editText2"
            android:layout_toEndOf="@+id/retTV"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/retTV" />
    </RelativeLayout>


    <!--android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" /-->

</android.support.design.widget.CoordinatorLayout>
